# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import passportsRouter from "./passports";
 import companiesRouter from "./companies";
 import loaRouter from "./loa";
+import loaOptionsRouter from "./loa-options";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(passportsRouter);
 router.use(companiesRouter);
 router.use(loaRouter);
+router.use(loaOptionsRouter);
 
 export default router;
